# ferris

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20210118194353_create_all.sql
src/: config.rs  converter.rs  language_filter.rs  main.rs  math.rs  memes.rs  types.rs  utils.rs  voice.rs
src/code_execution/: api.rs  eval.rs  mod.rs  util.rs
src/commands/: chess.rs  code.rs  math.rs  mod.rs  reaction_roles.rs  utils.rs
src/helpers/: config.rs  database.rs  getters.rs  mod.rs  permission.rs  reaction_roles.rs
src/service/: mod.rs
src/service/db/: mod.rs
src/service/discord/: mod.rs  permission.rs  reaction_roles.rs  types.rs
