[package]
name = "ferris"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.10", features = ["framework", "standard_framework", "rustls_backend", "collector", "http", "model", "utils", "builder", "cache", "client", "voice"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
meval = "0.2.0"
