[package]
name = "ferris"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.3.0", features = ["rt-multi-thread", "macros", "time", "process"] }
tracing-subscriber = "0.2.17"
serde = { version = "1.0.124", features = ["derive"]}
serde_json = "1.0.64"
futures = "0.3.13"
dashmap = "4.0.2"
reqwest = "0.11.2"
meval = "0.2.0"
chrono = "0.4.19"
shess = {version = "0.1.5", features = ["discord"]}
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = true
features = ["model", "collector", "native_tls_backend", "cache"]

[dependencies.sqlx]
git = "https://github.com/ant32/sqlx"
branch = "tokio-1.0"
default-features = false
features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "offline"]