[package]
name = "ferris"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.9", features = ["model", "collector", "native_tls_backend", "cache", "voice"]}

tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros", "time", "process"] }
tokio-stream = "0.1.7"
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.19"
tracing-log = { version = "0.1.2", features = ["env_logger"] }
futures = "0.3.17"

# sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "offline"]}
mongodb = { version = "2.0.1", features = ["tokio-runtime"] }
redis = { version = "0.21.0", features = ["tokio-comp", "connection-manager"] }
# tera = "1.7.1"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["v4", "serde"] }

serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"

eyre = "0.6.5"
color-eyre = "0.5.11"
reqwest = { version = "0.11.5", features = ["json"] }
rand = "0.8.4"
dashmap = "4.0.2"
dotenv = "0.15.0"
config = "0.11.0"

meval = {version = "0.2.0", features = ["serde"] }
# shess = "0.1.12"